--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
@@ -42,5 +43,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
     implementation 'com.google.firebase:firebase-core:16.0.0'
+
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
 }
 apply plugin: 'com.google.gms.google-services'
